fix header alignment

--- a/pt_lightning_sphinx_theme/static/css/theme.css
+++ b/pt_lightning_sphinx_theme/static/css/theme.css
@@ -9721,6 +9721,7 @@ pre {
 }
 
 .header-logo {
+  position: absolute;
   height: 27px;
   width: 300px;
   background-image: url(../images/logo.svg);
@@ -9728,7 +9729,7 @@ pre {
   background-size: 220px,220px;
   background-repeat: no-repeat;
   display: block;
-  float: left;
+  float: none;
   z-index: 10;
 }
 
